--- a/_posts/thesis_chapters/2025-1-6-Gdps.md
+++ b/_posts/thesis_chapters/2025-1-6-Gdps.md
@@ -163,22 +163,15 @@ https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/
 <!-- **On GDP as a germ-cell and unit of analysis recap of design patterns** -->
 <!-- In the introduction of this thesis, I outlined some of the broader challenges of sharing practice and research to practically support the learning of coding practices beyond the immediate context of the research in question. The choice of what scope of activity to examine in detail is relevant to this challenge.  -->
 
-In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. This chapter shifts focus to the perspectives of participants, using recorded data to interpret the varied applications of gameplay design patterns (GDPs). In doing so, it addresses the research question: How can game design patterns support the development of coding practices by novices? Chapter 2 summarised software  design patterns as a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples. While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. The last chapter investigated iterative activity involving alterations to games at the level of gameplay design patterns as part of the mutual evolution of learning design. This evolution encompassed various forms, including supporting resources such as code examples, instructional tutorials and quick-start activities proposing micro-level code modifications. This chapter builds on that analysis, focusing on the use of GDPs in diverse mediational strategies, not only within facilitator-provided resources and scaffolds but also as part of emerging community practices and interpersonal repertoires. During data analysis, GDPs appeared in such diverse and significant forms that they became candidates for a germ cell concept.
+Software design patterns are a grouping of a description of target project behaviour, with a suggested community solution of code structure often accompanied with worked examples (see Chapter 2). While existing research explores the use of game design patterns in educational settings, for instance to aid the transfer of science simulation concepts to other contexts [@repenning_scalable_2015; @basawapatna_using_2010] or as a foundation for co-design work [@eriksson_using_2019], there is limited work addressing their role in overcoming challenges faced by emerging communities of game creators using text coding. In the previous chapter, I outlined the evolution of tool use, emphasising emerging tensions in activity. The importance of gameplay design patterns (GDPs) emerged from participant input in P1 and were then integrated by myself into various forms of scaffolding within and graded step of practice including: quick-start activities, instructional tutorials, and code snippet examples. This chapter shifts focus to the perspectives of participants, using recorded data to interpret their varied uses and adaptations of GDP use. In doing so, it addresses the research question: How does CHAT theory help us understand how game design patterns can be used in an evolving community of novice game makers?  I describe the use of GDPs as diverse mediational strategies to overcome some of the tensions explored in the previous chapter, not only addressing the use of facilitator-provided resources but also as part of emerging community practices and interpersonal repertoires.
 
-Regarding the structure of this chapter, it begins with a vignette of parent-child interaction during the game-making process to contextualise the findings that follow. The chapter then presents a systematic analysis of participants’ varied uses of game design patterns, drawing on detailed observations of recorded video data. For this analysis, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter four. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. These sections focus on how gameplay design patterns are utilised by parents, children and facilitators, each through the lens of the respective analytical plane. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts. This discussion considers the examples of GDP use in practice to analyse GDPs as a mid-level construct, demonstrating their utility for both educational designers and researchers.
-
-
-
-#### Table of varied GDP use with supporting evidence
-
-The following table outlines the principle different uses of GDP in the data analysed. The next to last column lists example behaviour and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. The final column indicates how many of the 12 session transcriptions the behaviour was found within.
-
-<!-- Instead the potential of this learning design is of most value.   -->
 
 INSERT SUMMARY TABLE FROM HERE -
 https://docs.google.com/document/d/1Ce2cYIYnFCd9GM8zRntBd7lrud-dMbbrtgEQMoGNRmE/edit
 
-DEVELOP HOW THIS WILL BE SUPPORTED WITH EVIDENCE IN THIS CHAPTER.
+Table 6.1: Varied GDP use and summary of supporting evidence
+
+The above table summarised the principle different uses of GDP in the data analysed. The right column lists example behaviour and notes vignettes or appendices where the behaviour can be found in situ with more detailed analysis. In this table and the structure of this chapter, I employ Rogoff's three planes of analysis [@rogoff_observing_1995], as introduced in Chapter Four. This chapters sections examine how gameplay design patterns are utilised broadly by parents, children and facilitators, each through the lens of a respective analytical plane. Recognising that these observations do not neatly align with the three planes, I discuss the use of GDPs across cultural activities, interpersonal activity and personal knowledge in three distinct sections. An analogy can be drawn between these three planes of analysis and the examination of activity systems at varying scopes. Specifically, the cultural plane aligns with the community scope of activity described in Figure 5.x in the previous chapter, while the interpersonal and personal planes correspond to smaller scopes depicted in Figure 5.x. A discussion section explores the implications of these findings in relation to existing research and theoretical concepts.
 
 <!--
 _extending the use of GDPs beyond the initial use to diverse mediational uses and component parts of emerging making repertoires & Identifying GDPs as a germ cell/ unit of analysis_ -->
@@ -193,7 +186,7 @@ _extending the use of GDPs beyond the initial use to diverse mediational uses an
 
 <!-- While these approaches are  distinct in their pedagogical use, they stemmed from the same germ-cell activity of altering the game through the use of game design patterns via varied means.  -->
 
-<!-- -  design patterns in learning design which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
+<!-- -  design patterns in learning dFor this analysisesign which exist at different scopes of activity [@mcandrew_patterns_2006].(CHECK THIS) -->
   <!-- - how design patterns interplay with design principles and how the process relates to design based research  [@linn_science_2006]. -->
 <!-- While this concept of germ cell / unit of analysis a is more typically used in a larger scope of societal activity, the principles apply this smaller scope.  -For a study of this nature, too broad an analysis risks insufficient detail to allow replication, too narrow risks being overly context dependant and limiting the potential for wider application. -->
 
@@ -258,12 +251,8 @@ PULL OUT AN EXAMPLE -->
 
 ## The role of GDPs in the personal appropriation of concepts and processes  - ( Target 1000)
 
-<!--
-KEEP LINK BUT MOVE LATER
-The previous section began to touch on the personal appropriation of coding skill via the debugging process. -->
 
-
-As outlined in Chapter 2, the focus on skills and knowledge developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the under explored areas of social and cultural aspects of the coding process of novices and as such the design of this study does not suit full exploration of the personal plane of activity. In this informal learning context, participants did not request exploration of concepts aligned with computing curriculum, instead driven more by practical desire to make a game using the tools provided. Despite this, the evolving design process surfaced activities which and allow the exploration of surfacing of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
+As outlined in Chapter 2, the focus on curricular knowledge and related skill developed by participants is the dominant thread in research on digital coding and game making [@kafai_constructionist_2015-1; @papert_mindstorms:_1980]. The research aims of this study focus on the less explored areas of social and cultural aspects of the coding process of novices. As such, the design of this study does fully address the exploration of the personal appropriation plane of activity. Additionally, in this informal learning context, participants did not request exploration of concepts aligned with computing curriculum, instead being driven more by practical desire to make a game using the tools provided. Despite this, the evolving design process resulted in activities which do allow the exploration of computational thinking and other curricular concepts. Given the potential to adapt this learning design to a more formal environment to address needs outlined in the introductory chapter, from P2 onwards I began to augment the learning design to suit curriculum-oriented teaching and assessment of computational thinking concepts and skills, a process which resulted in a learning map of curricular concepts included here as Table 6.x .
 
 |      Coding Concepts    | Systems Patterns    | Design Practices|
 |--------------|-----------|------------|
@@ -280,7 +269,12 @@ Table 6.x. Learning Dimensions of the 3M Game Making Model
 
 <!-- NOTE - this map focuses on more concrete concepts,  -->
 
-Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts. Papert's research on Microworlds saw one of the roles learning designers to shape the affordances of playful learning environments to steer learners to explore scientific concepts, mathematical concepts, for example geometry in Turtle computing. Similarly, the design of this research's template can be seen as a half-baked Microworld, with key conceptual affordances represented in the learning map above.
+Appendix.learningmap explores in more detail the evolution of this map, which acknowledges significant tensions in integration of concepts into a informal context, and draws on the process and rationale of Bevan and Petrich's  [-@bevan_learning_2015; -@petrich_it_2013] work to bring a similar learning map to a seemingly chaotic tinkering and making process in museum contexts.
+
+There is a tension in the evolution of this learning map, one familiar to teachers using project and play-based approaches,  between the naturalistic approach made possible by the non-formal learning approach and desire to align with curricular concepts. It is of value to compare this observational approach to the design driven process typified by research on Microworlds which foregrounds the role of learning designers to shape the affordances of (playful) learning environments to steer learners to explore curricular concepts. In much Mircoworlds research these are often scientific or mathematical concepts: take for example geometry in Turtle computing with the LOGO language [@ernest_whats_1988]. While there are similarities between this design and the constructionist ethos behind LOGO, the leading motivation of this study is creation of and acculturation to a game making community. Kynigos [-@kynigos_black-and-white_2004-1] explores the tension between more targetted/restricted and more adaptable technology toolsets using a white-box, black-box distinction (explored in LR), noting the difficulty of communicating the value of non-commodified, adaptable toolsets despite their exploratory potential. The design of this research's learning design template can be seen as a half-baked Microworld [@kynigos_half-baked_2007], with the varied affordances of the design interpreted as invitations to contribute to an improvable boundary object [@kynigos_half-baked_2007, p.336]. This focus thus motivates and facilitates discussion on a shared experience in a way which aligns to the sociocultural focus of this study.
+
+
+<!-- RETURN TO THIS TO REPRESENT SOME OF THE CHALLENGES AND DIFFICULTY OF SWIMMING AGAINST THE STREAM IN TERMS OF COMMODIFICIATION OF TOOLS -->
 
 <!-- One area in particular stand out: code patching technique and debugging types of coding errors. This is chosen as an under-researched inclusive practice which merits further investigation (include in Chapter 2). -->
 
@@ -288,21 +282,16 @@ Appendix.learningmap explores in more detail the evolution of this map, which ac
 
 <!-- MOVE?
 A summary of a book chapter [@chesterman_game_2023] exploring these issues with recommendations for practitioners is included in Appendix.learningmap. -->
-
-
-Given that this thesis has a focus on community and social aspects of use of GDPs, evidence of only one dimension of personal appropriation is included here in this section, that of technical implementation of coding structures. The implementation of GDPs can stimulate participants to adopt or to share technical processes in a variety of ways. Technical processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or evolved from informal interaction between peers. The following observations show the adaptation of introduced processes being modified by the community.
-
-
 <!-- NOTE - (Additional examples may be included in Appendix.learning) -->
 
 
 ### The interrelationship of GDPs and the development of technical processes
 
-In order to achieve the goals of integrating new or adapting existing game design patterns in their games, participants needed to develop unfamiliar technical process associated with computer coding and including foundational digital skills associated with using a desktop personal computer (see Appendix.digitalliteracy). An example of skills which many participant developed is that of keyboard and mouse use which together with use of internet browser tabs facilitate navigation between computer code, game prototype and supporting web-based documentation.  Such personal appropriation and fluidity are well illustrated in the repeated, solo, incremental changes in level design by Toby (see V1.a). Increased fluidity were shown in by most participants, in particular in the areas of creating and uploading, and integrating graphical assets, adjusting game challenge via altering GDPs elements, and coding processes of debugging and code patching (explored later). In line with CHAT theory, this can be interpreted as an operationalisation of previous actions which were previously explicitly taught or learnt [@leontiev_activity_2009].
+Given the limited focus of this thesis, only one dimension of personal appropriation is included here: the technical implementation of coding structures. The implementation of GDPs can encourage participants to adopt or share technical processes in various ways. These processes were sometimes introduced in a basic form through scaffolded activities, supporting documentation or informal interactions between peers. The following observations illustrate how introduced processes were adapted and modified by the community. To integrate new or adapt existing game design patterns in their games, participants needed to develop unfamiliar technical processes associated with computer coding, as well as foundational digital skills related to using a desktop personal computer. See Appendix Digital Literacy for further details. One example of a skill developed by many participants was proficiency in keyboard and mouse use. Combined with navigation of internet browser tabs, this facilitated movement between computer code, game prototypes and supporting web-based documentation. Such personal appropriation and increasing fluidity are well illustrated in Toby’s repeated, solo, incremental changes to level design, as seen in V1.a. Most participants demonstrated increased fluency, particularly in areas such as creating, uploading and integrating graphical assets, adjusting game challenges by modifying GDP elements, and engaging in coding processes such as debugging and code patching, which is explored later. In line with CHAT theory, this can be interpreted as the operationalisation of actions that were previously explicitly taught or learned, as discussed by Leontiev [@leontiev_activity_2009].
 
-While the use of new techniques were driven by the implementation of GDPs, the following observations expose a complex, interdependent relationship between concepts of GDPs and emergent technical processes. In line with Rogoff's understanding of personal appropriation as bi-directional in nature of the appropriation of personal knowledge, emphasising foundational sociocultural view of knowledge as being mutually constituted, participants feed their interpretation of knowledge back into the communities of which they are a part, in this case the game making community. In this process the GDPs act as concepts and project stages to facilitate this interpersonal process, as explored in the following example.
+While the use of new techniques was driven by the implementation of GDPs, the following observations reveal a complex and interdependent relationship between GDP concepts and emergent technical processes. In line with Rogoff's understanding of personal appropriation as bi-directional, where the appropriation of personal knowledge is shaped by and contributes to a broader sociocultural context, participants fed their interpretations of knowledge back into the communities of which they were a part. In this case, this was the game-making community. In this process, GDPs functioned as conceptual tools and structured project stages that facilitated this interpersonal exchange, as explored in the following example. In Vignette 5, sections V5.a and V5.c, Madiha seeks assistance from her daughter Nasrin to format and export graphical files for use in the game code project. The implementation of her chosen GDPs drives the development of these technical processes, as she must either learn them herself or draw on peer knowledge to complete the task. Changing pen colours in the graphical tool, for example, is a process Nasrin has already internalised and performs effortlessly, whereas Madiha is still consciously building her competency. Nasrin has operationalised the process, incorporating it into her repertoire of practices. Similarly, in section V5.d, Madiha receives help from a peer, Ed, in using the cropping tool to remove redundant space at the edges of sprite characters after he playtests her game.
 
-In Vignette 5 (V5.a & V5c), Madiha(p) accesses help from her daughter Nasrin(c) to first format and then exporting graphical files to be imported into the game code project. The implementation of her chosen GDPs drives the development of these technical processes as she must learn or at least to draw on peer knowledge to complete it. The process of changing pen colours on the graphical tool is one which the child has been able to translate into a effortless process whereas the parent is still consciously building her competency. Nasrin has operationalised the process and it becomes part of the toolset of practices that she can draw on. Similarly, in V5.d Madiha is helped in the use of the cropping tool, a process to redundant space at the edges of design sprite characters, by a peer child Ed(c) after he had playtesting Madiha's game.
+
 
 
   <!-- Madiha also benefits, the expertise of her child to undertake that process is added to her distributed toolset. However, she is also keen to develop her own competency as indicated by her asking child to explain the process. -->
@@ -334,11 +323,11 @@ In Vignette 5 (V5.a & V5c), Madiha(p) accesses help from her daughter Nasrin(c) 
 
 <!-- **Code Patching as a guided technical process and the use of GDPs to nurture tactical responses to coding errors** -->
 
-Turning to the practice of code patching, a guided technical process to scaffold the coding process (see glossary & Chapter 2), video evidence and observational journal notes show the potential of a coupling of code implementation and target behaviour, structured using a framework of GDPs. This patching process became an important process in documentation. While code was provided, in practice mistakes were still made and additional customisations were made. An example of code patching in practice is show in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1.a).
+Turning to the practice of code patching, a guided technical process designed to scaffold the coding process (see Glossary and Chapter 2), video evidence and observational journal notes highlight the potential of coupling code implementation with target behaviour, structured within a framework of GDPs. This patching process became an important element of documentation. Although code was provided, mistakes were still made in practice, and additional customisations were introduced. An example of code patching in practice can be seen in Toby's careful copying and pasting of different lines of code from supporting materials into his game project (see V1.a).
 
-Toby's success in using the code patching technique is supported by the UMC structure of the game template in line with UMC principles explored in the previous chapter and the high level of context present in the use of GDP as a guiding framework of the learning design. This is illustrated in V1 when Toby alters the imported code to produce a kind of programming error I refer to as a glitch: specifically an error where the game keeps working but produces an unintended effect (see V1.a). This glitch bug provoked initial investigation, prompted Toby to ask for my help, and then required a period of iterative revision and cross referencing with the original code snippet. From this and similar observations I propose that the close coupling of code implementation and target behaviour (in this case structured around GDPs) aids scaffolds the debugging process and can be profitably can be drawn on by facilitators. In addition, the key affordances of the learning design, the starting template, code snippets and resulting code patching process increased appear to encourage the creation of glitch errors. The data in in this section is supported by further observations on an emerging diversity of helping strategies in response to different forms of errors in Appendix.debugging. I also explain the patching process in more detail to participants in an extract in V9.
+Toby's success in using the code patching technique was supported by the UMC structure of the game template, in line with the UMC principles explored in the previous chapter, and the high level of contextualisation provided by GDPs as a guiding framework in the learning design. This is illustrated in V1 when Toby alters the imported code, producing a type of programming error I refer to as a glitch. This specific error occurs when the game continues to function but exhibits an unintended effect (see V1.a). The glitch prompted an initial investigation, led Toby to seek my assistance, and required a period of iterative revision and cross-referencing with the original code snippet. From this and similar observations, I propose that the close relationship between code implementation and target behaviour, in this case structured around GDPs, scaffolds the debugging process and can be a valuable resource for facilitators.
 
-To sum up, I suggest that noticing, celebrating and exploring the code sources which cause the unintended behaviours may be an inclusive strategy to mitigate the potentially frustrating process of debugging. To support this in
+Additionally, key affordances of the learning design, including the starting template, code snippets and the resulting code patching process, appear to encourage the creation of glitch errors. The data in this section is further supported by observations on the emerging diversity of helping strategies in response to different types of errors, discussed in Appendix Debugging. I also explain the patching process in greater detail to participants in an extract from Vignette 9 (V9a). In the commentary (V9.b), I propose that noticing, celebrating and exploring the sources of unintended behaviours can serve as an inclusive strategy to mitigate the potentially frustrating process of debugging.
 
 
 <!-- NOTE Check is there  STILL material to  INTEGRATE FROM Appendix.debugging -->
