gdp discussion reworking

--- a/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
+++ b/_posts/thesis_chapters/tocs/2025-1-6-Gdps.md_toc.md
@@ -4,28 +4,21 @@
         2024](#research-questions---march-2024)
     -   [Notes to restructure](#notes-to-restructure)
     -   [Introduction](#introduction)
-        -   [Table of varied GDP use with supporting
-            evidence](#table-of-varied-gdp-use-with-supporting-evidence)
     -   [The role of GDPs in the personal appropriation of concepts and
         processes - ( Target
         1000)](#the-role-of-gdps-in-the-personal-appropriation-of-concepts-and-processes---target-1000)
         -   [The interrelationship of GDPs and the development of
             technical
             processes](#the-interrelationship-of-gdps-and-the-development-of-technical-processes)
-            -   [Link to next section](#link-to-next-section)
-    -   [GDPs used in the process of guided participation (Target
-        2500)](#gdps-used-in-the-process-of-guided-participation-target-2500)
-        -   [GDPs and their grouping as a collection or menu of
-            suggested options, offer the potential to assist project
-            navigation, acting as a framework for code examples and
-            step-by-step tutorials
-            (600)](#gdps-and-their-grouping-as-a-collection-or-menu-of-suggested-options-offer-the-potential-to-assist-project-navigation-acting-as-a-framework-for-code-examples-and-step-by-step-tutorials-600)
+    -   [GDPs used in the process of guided
+        participation](#gdps-used-in-the-process-of-guided-participation)
+        -   [Use of a menu of GDPs to assist project navigation and
+            resource
+            organisation](#use-of-a-menu-of-gdps-to-assist-project-navigation-and-resource-organisation)
         -   [GDPs used to scaffold ideation and prioritisation processes
             (800)](#gdps-used-to-scaffold-ideation-and-prioritisation-processes-800)
         -   [GDPs aiding the process of division of labour
             (1400)](#gdps-aiding-the-process-of-division-of-labour-1400)
-            -   [Discussion on division of labour in the video
-                data](#discussion-on-division-of-labour-in-the-video-data)
     -   [Use of GDPs in the cultural plane / community level of
         activity](#use-of-gdps-in-the-cultural-plane-community-level-of-activity)
         -   [The role of GDPs to facilitate learners to design for
@@ -34,12 +27,10 @@
             interest](#gdps-facilitate-the-use-of-wider-funds-of-knowledge-and-interest)
         -   [Evolution and propagation of GDPs concepts during
             playtesting](#evolution-and-propagation-of-gdps-concepts-during-playtesting)
-    -   [Reduced discussion section](#reduced-discussion-section)
-        -   [Intro in relation to mediation and
-            repertoires](#intro-in-relation-to-mediation-and-repertoires)
-        -   [Observations and analysis on interventions to aid
-            construction of repertoires of
-            practice](#observations-and-analysis-on-interventions-to-aid-construction-of-repertoires-of-practice)
+    -   [Discussion](#discussion)
+        -   [Addressing GDPs in relation to processes of mediation and
+            incorporation in repertoires of
+            practice](#addressing-gdps-in-relation-to-processes-of-mediation-and-incorporation-in-repertoires-of-practice)
         -   [Observations on emerging design
             practices](#observations-on-emerging-design-practices)
             -   [The potential of open / creative spaces to facilitate
